--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,10 @@
-   upstream backend {
-     server pos-backend-frontend-cicd-jenkins-docker_backend_pos_1:4500;     
-     server pos-backend-frontend-cicd-jenkins-docker_backend_pos_2:4500;     
-     server pos-backend-frontend-cicd-jenkins-docker_backend_pos_3:4500;     
-   }
-
+   
 server {
   listen 80 default_server;
 
   location /backend {
     proxy_redirect off;
-    proxy_pass http://backend;
+    proxy_pass http://34.207.100.230/backend;
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
